manifests/test-unprivileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unprivileged-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:1.25
    securityContext:
      privileged: false
